<resources>
    <string name="app_name">DiceApp</string>
    <!--  Base  -->
    <string name="hp">HP</string>
    <string name="armor">Armor</string>
    <string name="attack_power">Attack Power</string>
    <string name="name">Name</string>
    <string name="counter">Counter</string>
    <!--  Content Description  -->
    <string name="entity_image">entity image</string>
    <string name="player_image">player image</string>
    <string name="attack_image">attack image</string>
    <string name="heal_potion_image">heal potion image</string>
    <!--  Alert Dialog  -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--  CreateFragment  -->
    <string name="create_your_character">Create your character</string>
    <string name="character_name">Character name</string>
    <string name="enter_name">Enter name</string>
    <string name="fight">Fight</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <!--  GameFragment  -->
    <string name="log">Log</string>
    <string name="progress">progress</string>
    <string name="exit">Exit</string>
    <string name="attack">Attack</string>
    <string name="enter_character_name">Enter character name</string>
</resources>